--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,23 @@ a {
 * {
   box-sizing: border-box;
 }
+
+p {
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6{
+  margin: 0;
+}
+
+h4{
+  color: grey;
+}
+
+select{
+  background-color: transparent;
+  border: 0;
+  color: white;
+  font-size: .8rem;
+  outline: 0;
+}
